@@ -1,8 +1,8 @@
 plugins {
     id "application"
     id "base"
-    id "org.springframework.boot" version '2.5.1'
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id 'org.springframework.boot' version '4.0.0'
+    id "io.spring.dependency-management" version "1.1.7"
 }
 run {
     standardInput = System.in
@@ -24,49 +24,53 @@ allprojects {
     version = '0.0.1-SNAPSHOT'
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'java-library'
-
-    sourceCompatibility = '1.8'
+//sourceCompatibility = '1.8'
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
     }
 
     repositories {
+        maven { url = uri("https://repo.maven.apache.org/maven2") }
         mavenCentral()
     }
 
     dependencies {
 
-        testImplementation('org.springframework.boot:spring-boot-starter-test:2.1.0.RELEASE') {
+        testImplementation('org.springframework.boot:spring-boot-starter-test:4.0.0') {
             exclude group: 'junit', module: 'junit'
         }
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.1'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.0.1'
     }
 
     test {
         useJUnitPlatform()
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
         testLogging {
             events "passed", "skipped", "failed"
         }
     }
 }
 
-dependencies {
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
-}
+    dependencies {
+        implementation 'com.google.code.gson:gson:2.7'
+
+    }
 
 
 subprojects {
-    println("Sub -->" + it.name)
-    def projName = it.name
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    println("Sub -->"+it.name)
+
+//    sourceCompatibility = 1.8
+//    targetCompatibility = 1.8
 
     apply plugin: 'io.spring.dependency-management'
 
     dependencyManagement {
-        imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:2.1.9.RELEASE")
+        dependencies {
+            dependency 'org.springframework.boot:spring-boot-starter-web:4.0.0'
         }
     }
 
